// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table courses {
  id integer [primary key, not null]
  name varchar [not null]
  invitation_code varchar
}

Table course_members {
  course_id integer [not null]
  user_id integer [not null]
  is_teacher boolean [default: false]

  indexes {
    (course_id, user_id) [pk]
  }
}

Table users {
  id integer [primary key, not null]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  profile_picture varchar
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table posts {
  id integer [primary key, not null]
  course_id integer [not null]
  name varchar [not null]
  description text
  post_type_id integer [not null]
  deadline_at timestamp
  is_edited boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table comments {
  id integer [primary key, not null]
  post_id integer [not null]
  sender_id integer [not null]
  message text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table post_types {
  type_id integer [primary key, not null]
  name varchar [not null]
}

Table submissions {
  id integer [primary key, not null]
  post_id integer [not null]
  user_id integer [not null]
  status_id integer [not null]
  last_history_id integer
  submitted_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table submission_statuses {
  id integer [primary key, not null]
  name varchar [not null]
}

Table submission_histories {
  id integer [primary key, not null]
  submission_id integer [not null]
  version_number integer [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table background_attachments {
  course_id integer [not null]
  attachment_id integer [not null]

  indexes {
    (course_id, attachment_id) [pk]
  }
}

Table submission_attachments {
  submission_id integer [not null]
  attachment_id integer [not null]

  indexes {
    (submission_id, attachment_id) [pk]
  }
}

Table posts_attachments {
  post_id integer [not null]
  attachment_id integer [not null]

  indexes {
    (post_id, attachment_id) [pk]
  }
}

Table attachments {
  id integer [primary key, not null]
  uploader_id integer [not null]
  attachment_path varchar [not null]
  uploaded_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table post_messages {
  id integer [primary key, not null]
  sender_id integer [not null]
  recipient_id integer [not null]
  message text [not null]
  post_id integer
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ---------- RELATIONS ----------

// Courses
Ref: course_members.course_id > courses.id
Ref: posts.course_id > courses.id
Ref: background_attachments.course_id > courses.id

// Users
Ref: course_members.user_id > users.id
Ref: comments.sender_id > users.id
Ref: submissions.user_id > users.id
Ref: attachments.uploader_id > users.id
Ref: post_messages.sender_id > users.id
Ref: post_messages.recipient_id > users.id

// Posts
Ref: posts.post_type_id > post_types.type_id
Ref: comments.post_id > posts.id
Ref: submissions.post_id > posts.id
Ref: posts_attachments.post_id > posts.id
Ref: post_messages.post_id > posts.id

// Attachments
Ref: posts_attachments.attachment_id > attachments.id
Ref: background_attachments.attachment_id > attachments.id
Ref: submission_attachments.attachment_id > attachments.id

// Submissions & Histories
Ref: submissions.status_id > submission_statuses.id
Ref: submissions.last_history_id > submission_histories.id
Ref: submission_histories.submission_id > submissions.id
Ref: submission_attachments.submission_id > submissions.id
